# docs/swagger.json
@@ -14,6 +14,25 @@
     "basePath": "/",
     "paths": {
         "/mhs": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "menampilkan semua data mahasiswa",
+                "operationId": "read-mahasiswa",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    }
+                }
+            },
             "post": {
                 "produces": [
                     "application/json"
@@ -55,7 +74,8 @@
                     "example": "1"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "nama": {
                     "type": "string",
